@@ -2,7 +2,7 @@
  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <!-- $Id: pcaml.html,v 1.1 2007/07/28 11:51:18 deraugla Exp $ -->
+  <!-- $Id: pcaml.html,v 1.2 2007/07/30 02:28:24 deraugla Exp $ -->
   <!-- Copyright (c) 2007 INRIA -->
   <title>Pcaml</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -19,7 +19,18 @@
 
 <h1 class="top">The Pcaml module</h1>
 
-<p>... to be written ...</p>
+<p>Language grammar, entries and printers.</p>
+
+<p>This module holds variables to be set and used by language syntax
+   extensions and for pretty printing. Some of them are used by the
+   quotation management.</p>
+
+<dl>
+  <dt><tt>value syntax_name : ref string;</tt></dt>
+  <dd>The name of the current syntax. Set by the loaded syntax kit.</dd>
+</dl>
+
+<p>... to be continued ... </p>
 
 <div class="trailer">
 </div>
