@@ -1,6 +1,11 @@
 Camlp5 Version 4.07:
 ---------------------
 
+* [30 Jul 07] Fixed bug in normal syntax: let C x = C 1 was not accepted
+  (bug rather difficult to resolve).
+* [30 Jul 07] Changed pretty printing *normal* syntax: let C x = .. printed
+  like that, *not* transformed into let x = match .. with C x -> x.
+
 Camlp5 Version 4.06:
 ---------------------
 
